--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
-  </head>
-  <body>
-    <h1>Welcome to My Personal Website</h1>
-    <p>This is a simple site hosted using GitHub Pages.</p>
-  </body>
-</html>
-
+Hello World
